Correct spacing value

--- a/src/resources/sass/pages/pages.scss
+++ b/src/resources/sass/pages/pages.scss
@@ -138,7 +138,7 @@ body {
 
 	.product-cart + .block {
 		@media screen and (min-width: $screen-sm + 1) and (max-width: $screen-sm-max){
-			margin-top: 45px;
+			margin-top: 42px;
 		}
 	}
 }
